# WackyEngine

./: .gitignore  CMakeLists.txt  CODING_STYLE.md  Engine.cpp  Engine.h  Game.h  README.md  Renderer.cpp  Renderer.h  WackyEngine.slnx  WackyEngine.vcxproj  WackyEngine.vcxproj.filters  compile_shaders.bat  frag.spv  imgui.ini  main.cpp  shader.slang  shader.vert  vert.spv
cmake/: toolchain-clang-windows.cmake
src/: main.cpp
src/core/: Engine.cpp  Engine.h  Entity.cpp  Entity.h  EntityRegistry.h  Game.h  Object.cpp  Object.h  Project.h  ProjectManager.cpp  ProjectManager.h  Reflection.cpp  Reflection.h  World.cpp  World.h
src/editor/: EditorRenderer.cpp  EditorRenderer.h  EngineUI.cpp  EngineUI.h
src/entities/: Spinner.cpp  Spinner.h
src/renderer/: EngineUI.cpp  EngineUI.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  VulkanBase.cpp  VulkanBase.h
src/runtime/: RuntimeMain.cpp  RuntimeRenderer.cpp  RuntimeRenderer.h  main.cpp
src/runtime/renderer/: RuntimeRenderer.cpp  RuntimeRenderer.h
